# EmbedLang

./: AEM_Language_Cheat_Sheet.md  text.txt
docs/: REFERENCE.md
examples/: solar_heater.aem  two_wheel_ramp.aem
fast_trig_lib/: CMakeLists.txt  LICENSE  Makefile  README.md  fast_trig.hpp  fast_trig_test.cpp
fast_trig_lib/examples/: arduino_example.ino  examples.cpp
fast_trig_lib/tests/: test_fast_trig.cpp
grammar/: aem_grammar.ebnf
src/: main.py
stdlib/: angle.aem  core.aem  gpio.aem  math.aem  mathf.aem  protocol.aem  pwm.aem  signal.aem  spi.aem  trig.aem  trigf.aem  vector.aem
stdlib/drivers/: l298n.aem  motor.aem  mx1508.aem  signed_pwm.aem
stdlib/trig/: accurate.aem  balanced.aem  fast.aem
